--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>mi repositorio</title>
 </head>
 <body>
-    <p>toto</p>
-    <h2>totoslam</h2>
-    <h3>fla</h3>
+    <div>
+        <p>tomi</p>
+    </div>
 </body>
 </html>
