--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/fce30e0d61.js" crossorigin="anonymous"></script>
     <title>mi repositorio</title>
 </head>
 <body>
-    <div>
-        <p>tomi</p>
+    <header>
+        <nav class="logo-titulo">
+        <a href="" class="logo">
+            <img src="https://img.freepik.com/vector-premium/diseno-logotipo-letra-ts-moderno_772242-18.jpg?w=2000" alt="loguito">
+            <h2>Tomas Slaminsky</h2>
+        </a>
+        </nav>
+        <nav class="nav">
+            <ul class="nav__ul">
+                <li class="nav__li"><i class="fa-solid fa-house"></i><a href="#">inicio</a></li>
+                <li class="nav__li"><i class="fa-solid fa-person"></i><a href="#">sobre mi</a></li>
+                <li class="nav__li"><i class="fa-brands fa-instagram"></i><a href="#">instagram</a></li>
+                <li class="nav__li"><i class="fa-brands fa-facebook"></i><a href="#">facebook</a></li>
+                <li class="nav__li"><i class="fa-solid fa-circle-info"></i> <a href="#">info</a></li>
+            </ul>
+    </header>
+
+    <div class="carta">
+    <a href="ruta2.html"><h3>Formulario</h3></a>
+    <a href=""></a>
     </div>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Gruppo&display=swap');
+        </style>
 </body>
 </html>
