--- a/ruta2.html
+++ b/ruta2.html
@@ -11,7 +11,7 @@
     <form action=”#”>
         <fieldset>
        <p>
-        <legend><h1>ejemplo</h2></legend> 
+        <legend><h5>Formulario clase 1</h5></legend> 
        <label for=”nombres”>Nombres</label>
        <input type=”text” id=”nombres” placeholder=”nombres” size=”50px” minlength=”3” maxlength=”30” required>
        </p>
@@ -78,5 +78,10 @@
        <p>
        <input type="submit" value="Continuar"/>
        </p>
+       <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Gruppo&display=swap');
+        </style>
 </body>
 </html>
