--- a/ruta2.html
+++ b/ruta2.html
@@ -82,6 +82,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Gruppo&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
         </style>
 </body>
 </html>
