--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="logo-titulo">
         <a href="" class="logo">
             <img src="https://img.freepik.com/vector-premium/diseno-logotipo-letra-ts-moderno_772242-18.jpg?w=2000" alt="loguito">
-            <h2>Tomas Slaminsky</h2>
+            <h2><span class="resaltado">T</span>omas <span class="resaltado">S</span>laminsky</h2>
         </a>
         </nav>
         <nav class="nav">
@@ -25,11 +25,12 @@
                 <li class="nav__li"><i class="fa-solid fa-circle-info"></i> <a href="#">info</a></li>
             </ul>
     </header>
-
+    <main>
     <div class="carta">
     <a href="ruta2.html"><h3>Formulario</h3></a>
     <a href=""></a>
     </div>
+    </main>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
