--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="logo-titulo">
         <a href="" class="logo">
-            <img src="https://img.freepik.com/vector-premium/diseno-logotipo-letra-ts-moderno_772242-18.jpg?w=2000" alt="loguito">
+            <img class="img-edit" src="https://img.freepik.com/vector-premium/diseno-logotipo-letra-ts-moderno_772242-18.jpg?w=2000" alt="loguito">
             <h2><span class="resaltado">T</span>omas <span class="resaltado">S</span>laminsky</h2>
         </a>
         </nav>
@@ -26,9 +26,10 @@
             </ul>
     </header>
     <main>
-    <div class="carta">
-    <a href="ruta2.html"><h3>Formulario</h3></a>
-    <a href=""></a>
+    <div class="contenedor">
+    <div class="caja"><a href="ruta2.html"><img class="caja1img" src="foto/formulario.jpg" alt=""><h3>Formulario</h3></a></div>
+    <div class="caja"><a href="ruta2.html"><img class="caja2img" src="foto/caja2.jpg" alt=""><h3>Curriculum v</h3></a></div>
+    <div class="caja"><a href="ruta2.html"><img class="caja1img" src="foto/caja3.jpg" alt=""><h3>Animaciones</h3></a></div>
     </div>
     </main>
     <style>
