--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </header>
     <main>
     <div class="contenedor">
-    <div class="caja"><a href="ruta2.html"><img class="caja1img" src="foto/formulario.jpg" alt=""><h3>Formulario</h3></a></div>
-    <div class="caja"><a href="ruta2.html"><img class="caja2img" src="foto/caja2.jpg" alt=""><h3>Curriculum v</h3></a></div>
-    <div class="caja"><a href="ruta2.html"><img class="caja1img" src="foto/caja3.jpg" alt=""><h3>Animaciones</h3></a></div>
+    <div class="caja"><a href="ruta2.html"><img class="caja1img" id="caja1" src="foto/formulario.jpg" alt=""><h3>Formulario</h3></a></div>
+    <div class="caja"><a href="ruta2.html"><img class="caja2img" id="caja2" src="foto/caja2.jpg" alt=""><h3>Curriculum v</h3></a></div>
+    <div class="caja"><a href="ruta2.html"><img class="caja1img" id="caja1" src="foto/caja3.jpg" alt=""><h3>Animaciones</h3></a></div>
     </div>
     </main>
     <style>
