cambio el estilo del menu

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <ul class="nav__ul">
                 <li class="nav__li"><i class="fa-solid fa-house"></i><a href="#">inicio</a></li>
                 <li class="nav__li"><i class="fa-solid fa-person"></i><a href="#">sobre mi</a></li>
-                <li class="nav__li"><i class="fa-brands fa-instagram"></i><a href="#">instagram</a></li>
-                <li class="nav__li"><i class="fa-brands fa-facebook"></i><a href="#">facebook</a></li>
+                <li class="nav__li"><i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/tomislaminsky/?next=%2F" target="_blank">instagram</a></li>
+                <li class="nav__li"><i class="fa-brands fa-facebook"></i><a href="https://www.facebook.com/profile.php?id=100090534281814" target="_blank">facebook</a></li>
                 <li class="nav__li"><i class="fa-solid fa-circle-info"></i> <a href="#">info</a></li>
             </ul>
     </header>
