retoques y fixed en los background

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h2><span class="resaltado">T</span>omas <span class="resaltado">S</span>laminsky</h2>
         </a>
         </nav>
+        <h1>Bienvenidos!</h1>
         <nav class="nav">
             <ul class="nav__ul">
                 <li class="nav__li"><i class="fa-solid fa-house"></i><a href="#">inicio</a></li>
@@ -32,10 +33,12 @@
     <div class="caja"><a href="ruta2.html"><img class="caja1img" id="caja1" src="foto/caja3.jpg" alt=""><h3>Animaciones</h3></a></div>
     </div>
     </main>
+    <footer></footer>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Gruppo&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
         </style>
 </body>
 </html>
