creacion de footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="nav">
             <ul class="nav__ul">
                 <li class="nav__li"><i class="fa-solid fa-house"></i><a href="#">inicio</a></li>
-                <li class="nav__li"><i class="fa-solid fa-person"></i><a href="#">sobre mi</a></li>
+                <li class="nav__li"><i class="fa-solid fa-person"></i><a href="#" onclick="scrollToFooter()">sobre mi</a></li>
                 <li class="nav__li"><i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/tomislaminsky/?next=%2F" target="_blank">instagram</a></li>
                 <li class="nav__li"><i class="fa-brands fa-facebook"></i><a href="https://www.facebook.com/profile.php?id=100090534281814" target="_blank">facebook</a></li>
                 <li class="nav__li"><i class="fa-solid fa-circle-info"></i> <a href="#">info</a></li>
@@ -33,7 +33,22 @@
     <div class="caja"><a href="ruta2.html" target="_blank"><img class="caja1img" id="caja1" src="foto/caja3.jpg" alt=""><h3>Animaciones</h3></a></div>
     </div>
     </main>
-    <footer></footer>
+    <footer id="footer" class="footer">
+        <div class="contenedor2">
+        <div class="box"><i class="fa-solid fa-location-dot"></i>
+          <h2>Ubicacion</h2>
+          <p>Entre Rios-Argentina</p>
+        </div>
+        <div class="box"><i class="fa-solid fa-paper-plane"></i>
+          <h2>Gmail</h2>
+          <p>tommyslaminsky@gmail.com</p>
+        </div>
+        <div class="box"><i class="fa-solid fa-phone"></i>
+          <h2>Celular</h2>
+          <p>+54 3434152419</p>
+        </div>
+       </div>
+      </footer>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
