corregir errores y mejorar pco

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </header>
     <main>
     <div class="contenedor">
-    <div class="caja"><a href="ruta2.html" target="_blank"><img class="caja1img" id="caja1" src="foto/formulario.jpg" alt=""><h3>Formulario</h3></a></div>
-    <div class="caja"><a href="ruta2.html" target="_blank"><img class="caja1img" id="caja1" src="foto/cv.jpg" alt=""><h3>Curriculum v</h3></a></div>
-    <div class="caja"><a href="ruta2.html" target="_blank"><img class="caja1img" id="caja1" src="foto/caja3.jpg" alt=""><h3>Animaciones</h3></a></div>
+    <div class="caja"><a href="ruta2.html" target="_blank"><img class="caja1img" id="caja1" src="foto/formulario.jpg" alt=""><h3 id="titulo">Formulario</h3></a></div>
+    <div class="caja"><a href="ruta2.html" target="_blank"><img class="caja1img" id="caja1" src="foto/cv.jpg" alt=""><h3 id="titulo">Curriculum v</h3></a></div>
+    <div class="caja"><a href="ruta2.html" target="_blank"><img class="caja1img" id="caja1" src="foto/caja3.jpg" alt=""><h3 id="titulo">Animaciones</h3></a></div>
     </div>
     </main>
     <footer id="footer" class="footer">
@@ -54,6 +54,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Gruppo&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
         </style>
          <script>
             // Función para animar el elemento h1
@@ -76,5 +77,6 @@
                 setTimeout(animarTitulo, 3500); // Reiniciar la animación después de 3.5 segundos
             }, 9000); // Esperar 7 segundos antes de reiniciar la animación
         </script>
+        
 </body>
 </html>
