--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
         </nav>
         <h1 id="titulo">Bienvenidos!</h1>
         <nav class="nav">
-            <ul class="nav__ul">
+            <input type="checkbox"  id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
+            <ul id="menu" class="nav__ul">
                 <li class="nav__li"><i class="fa-solid fa-house"></i><a href="#">inicio</a></li>
                 <li class="nav__li"><i class="fa-solid fa-person"></i><a href="#" onclick="scrollToFooter()">sobre mi</a></li>
                 <li class="nav__li"><i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/tomislaminsky/?next=%2F" target="_blank">instagram</a></li>
                 <li class="nav__li"><i class="fa-brands fa-facebook"></i><a href="https://www.facebook.com/profile.php?id=100090534281814" target="_blank">facebook</a></li>
                 <li class="nav__li"><i class="fa-solid fa-circle-info"></i> <a href="#">info</a></li>
             </ul>
+        </nav>
+        <section></section>
     </header>
     <main>
     <div class="contenedor">
